<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:weightSum="1">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/num" android:hint="@string/num_ro"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0.29"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/msgToSend"
            android:hint="@string/message_envoyer"
            android:layout_marginTop="30dp" />
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0.29"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/nbIteration"
            android:hint="@string/nombre_de_fois"
            android:layout_marginBottom="45dp" />
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0.29"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/timeSleep"
            android:hint="@string/temps_attente_s"
            android:layout_marginBottom="39dp" />
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0.29"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lancer"
            android:id="@+id/buttonStart"
            android:layout_marginBottom="74dp" />
    </LinearLayout>

</RelativeLayout>
